# vfrust

./: Cargo.toml  Makefile  README.md  flake.nix
vfrust/: Cargo.toml
vfrust-cli/: Cargo.toml
vfrust-cli/src/: cli.rs  cloudinit.rs  main.rs  parse.rs  timesync.rs
vfrust/src/: error.rs  lib.rs  vsock.rs
vfrust/src/config/: bootloader.rs  mod.rs  platform.rs  vm.rs
vfrust/src/config/device/: audio.rs  fs.rs  gpu.rs  input.rs  mod.rs  network.rs  serial.rs  storage.rs  vsock.rs
vfrust/src/sys/: bootloader.rs  config_builder.rs  delegate.rs  device.rs  machine.rs  mod.rs  process_info.rs  vmnet.rs
vfrust/src/vm/: handle.rs  machine.rs  metrics.rs  mod.rs  network_metrics.rs  state.rs  vmnet_probe.rs  vmnet_proxy.rs
vfrust/tests/: cloudinit_e2e.rs  config.rs  devices.rs  fs_share.rs  metrics.rs  network.rs  serial.rs  snapshot.rs  storage.rs  vm_lifecycle_efi.rs  vm_lifecycle_linux.rs  vmnet.rs
vfrust/tests/common/: mod.rs
