[package]
name = "vfrust-cli"
version.workspace = true
edition.workspace = true
description = "Demo CLI for vfrust - macOS Virtualization.framework VM manager"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["macos", "virtualization", "vm", "cli", "vfkit"]
categories = ["command-line-utilities", "virtualization"]
readme = "../README.md"

[dependencies]
vfrust.workspace = true
clap.workspace = true
tokio = { workspace = true, features = ["full"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
libc.workspace = true
core-foundation-sys.workspace = true
