[package]
name = "vfrust"
version.workspace = true
edition.workspace = true
description = "Rust library for macOS Virtualization.framework VM management"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["macos", "virtualization", "vm", "apple", "vfkit"]
categories = ["os::macos-apis", "virtualization"]
readme = "../README.md"

[dependencies]
objc2.workspace = true
objc2-foundation = { workspace = true, features = [
    "NSArray",
    "NSDictionary",
    "NSError",
    "NSString",
    "NSURL",
    "NSData",
    "NSFileHandle",
    "NSObject",
    "NSNotification",
] }
objc2-virtualization = { workspace = true, features = [
    "block2",
    "VZVirtualMachine",
    "VZVirtualMachineConfiguration",
    "VZLinuxBootLoader",
    "VZEFIBootLoader",
    "VZMacOSBootLoader",
    "VZGenericPlatformConfiguration",
    "VZMacPlatformConfiguration",
    "VZGenericMachineIdentifier",
    "VZMacHardwareModel",
    "VZMacMachineIdentifier",
    "VZMacAuxiliaryStorage",
    "VZVirtioBlockDeviceConfiguration",
    "VZNVMExpressControllerDeviceConfiguration",
    "VZUSBMassStorageDeviceConfiguration",
    "VZDiskImageStorageDeviceAttachment",
    "VZDiskBlockDeviceStorageDeviceAttachment",
    "VZNetworkBlockDeviceStorageDeviceAttachment",
    "VZVirtioNetworkDeviceConfiguration",
    "VZNATNetworkDeviceAttachment",
    "VZFileHandleNetworkDeviceAttachment",
    "VZVirtioConsoleDeviceSerialPortConfiguration",
    "VZVirtioConsoleDeviceConfiguration",
    "VZFileSerialPortAttachment",
    "VZFileHandleSerialPortAttachment",
    "VZVirtioSocketDeviceConfiguration",
    "VZVirtioSocketListener",
    "VZVirtioSocketDevice",
    "VZVirtioSocketConnection",
    "VZVirtioGraphicsDeviceConfiguration",
    "VZVirtioGraphicsScanoutConfiguration",
    "VZMacGraphicsDeviceConfiguration",
    "VZMacGraphicsDisplayConfiguration",
    "VZGraphicsDisplayConfiguration",
    "VZUSBKeyboardConfiguration",
    "VZUSBScreenCoordinatePointingDeviceConfiguration",
    "VZVirtioFileSystemDeviceConfiguration",
    "VZSharedDirectory",
    "VZSingleDirectoryShare",
    "VZMultipleDirectoryShare",
    "VZLinuxRosettaDirectoryShare",
    "VZLinuxRosettaCachingOptions",
    "VZVirtioEntropyDeviceConfiguration",
    "VZVirtioTraditionalMemoryBalloonDeviceConfiguration",
    "VZEFIVariableStore",
    "VZVirtualMachineDelegate",
    "VZMACAddress",
    "VZStorageDeviceConfiguration",
    "VZStorageDeviceAttachment",
    "VZNetworkDeviceConfiguration",
    "VZNetworkDeviceAttachment",
    "VZSerialPortConfiguration",
    "VZSerialPortAttachment",
    "VZSocketDevice",
    "VZSocketDeviceConfiguration",
    "VZGraphicsDeviceConfiguration",
    "VZGraphicsDevice",
    "VZKeyboardConfiguration",
    "VZPointingDeviceConfiguration",
    "VZDirectorySharingDeviceConfiguration",
    "VZDirectoryShare",
    "VZEntropyDeviceConfiguration",
    "VZMemoryBalloonDeviceConfiguration",
    "VZBootLoader",
    "VZPlatformConfiguration",
    "VZConsoleDeviceConfiguration",
    "VZNetworkDevice",
    "VZDiskSynchronizationMode",
    "VZVirtioSoundDeviceConfiguration",
    "VZVirtioSoundDeviceStreamConfiguration",
    "VZVirtioSoundDeviceInputStreamConfiguration",
    "VZVirtioSoundDeviceOutputStreamConfiguration",
    "VZHostAudioInputStreamSource",
    "VZHostAudioOutputStreamSink",
    "VZAudioDeviceConfiguration",
    "VZAudioInputStreamSource",
    "VZAudioOutputStreamSink",
    "VZXHCIControllerConfiguration",
    "VZUSBControllerConfiguration",
] }
block2.workspace = true
dispatch2.workspace = true
libc.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile.workspace = true
dirs.workspace = true
